[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_strategies"
version = "0.1.0"
description = "Automated AI-driven stock and cryptocurrency trading system"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
addopts = "-ra -q -v"
testpaths = [
    "tests",
]
[tool.black]
line-length = 88
target-version = ["py310"]


[tool.pytest.ini_options]
env_files = [
    ".env"
]
